--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container">
                 <a class="navbar-brand" href="index.html">
-                    <img src="./Blue Modern Software Company Logo.png" alt="Nova91 Logo" width="60" height="60" class="d-inline-block align-top"  >
+                    <img src="./img/Blue Modern Software Company Logo.png" alt="Nova91 Logo" width="60" height="60" class="d-inline-block align-top"  >
                     Nova91
                 </a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -27,7 +27,7 @@
                             <a class="nav-link" href="about.html">من نحن</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="https://www.instagram.com/yourprofile" target="_blank"><i class="fab fa-instagram"></i> إنستجرام</a>
+                            <a class="nav-link" href="https://www.instagram.com/nova91.agency/" target="_blank"><i class="fab fa-instagram"></i> إنستجرام</a>
                         </li>
                     </ul>
                 </div>
@@ -41,7 +41,7 @@
             <div class="row">
                 <div class="col-md-4 mb-4">
                     <div class="card">
-                        <img src="./11-4-edited-2-300x300.png" class="card-img-top" alt="مشروع 1">
+                        <img src="./img/11-4-edited-2-300x300.png" class="card-img-top" alt="مشروع 1">
                         <div class="card-body">
                             <h5 class="card-title">Kalimera Resort</h5>
                             <p class="card-text">  موقع لمنتجع كاليميرا الموقع يحتوي على تفاصيل المنتجع و صور و فيديوهات المنتجع والاسعار و رابط الموقع الجغرافي و ارقام التواصل </p>
@@ -51,7 +51,7 @@
                 </div>
                 <div class="col-md-4 mb-4">
                     <div class="card">
-                        <img src="./Azul.png" class="card-img-top" alt="مشروع 2">
+                        <img src="./img/Azul.png" class="card-img-top" alt="مشروع 2">
                         <div class="card-body">
                             <h5 class="card-title">Azul Farm</h5>
                             <p class="card-text">  موقع لمزرعة ازول الموقع يحتوي على تفاصيل المنتجع و صور و فيديوهات المنتجع والاسعار و رابط الموقع الجغرافي و ارقام التواصل </p>
@@ -62,7 +62,7 @@
 
                 <div class="col-md-4 mb-4">
                     <div class="card">
-                        <img src="./13-300x300.png" class="card-img-top" alt="مشروع 2">
+                        <img src="./img/13-300x300.png" class="card-img-top" alt="مشروع 2">
                         <div class="card-body">
                             <h5 class="card-title">palami Farm</h5>
                             <p class="card-text">  موقع لمزرعة بلامي الموقع يحتوي على تفاصيل المنتجع و صور و فيديوهات المنتجع والاسعار و رابط الموقع الجغرافي و ارقام التواصل </p>
@@ -77,7 +77,7 @@
 
     <footer class="bg-dark text-white text-center py-3">
         <p>&copy; 2024 Nova91. جميع الحقوق محفوظة.</p>
-        <a href="https://www.instagram.com/yourprofile" target="_blank" class="text-white"><i class="fab fa-instagram"></i> تابعنا على إنستجرام</a>
+        <a href="https://www.instagram.com/nova91.agency/" target="_blank" class="text-white"><i class="fab fa-instagram"></i> تابعنا على إنستجرام</a>
     </footer>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
